--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "lshort-slovak.doc.tar.xz": 621431211fb41947eeb24cbdf63643b6fcb0d7f1
-  "lshort-slovak.tar.xz": c2d449d0e684f87acb6b5047e8df24d9e588cd1b
+  lshort-slovak.doc.tar.xz: 30aeff855d42a0480e479b83f3ee2ed74c1fa77d
+  lshort-slovak.tar.xz: b9c109fd4f8d443fd6d9844563482986b79c4b45
