--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  lshort-slovak.doc.tar.xz: 5da63e67bc5aafa0d71ee099e3ce2223fb8907e8
-  lshort-slovak.tar.xz: 39aed4b7d64077f6d2d145a5b8307c7059b9f87b
+  lshort-slovak.doc.r15878.tar.xz: eddf4e3e7531a59ba69e4b1bde82b485c9ea7e8b
+  lshort-slovak.r15878.tar.xz: 975539ac7e1c047883d962dcbe4d6891584bf9dc
